kyy-k8s-config/dev/app/backend/go-sitemap/go-sitemap-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: go-sitemap
  name: go-sitemap
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: go-sitemap
    spec:
      imagePullSecrets:
        - name: beijing
      containers:
        - env:
            - name: DATABASE_HOST
              value: 192.168.3.220:33006
            - name: DATABASE_NAME
              value: kaoyayacn
            - name: DATABASE_PASSWORD
              value: kaoyayacom2017
            - name: DATABASE_USER
              value: root
            - name: MASTER_DB_HOST
              value: 192.168.3.220:33006
            - name: MASTER_DB_NAME
              value: sq_kaoyaya
            - name: MASTER_DB_PASSWORD
              value: kaoyayacom2017
            - name: MASTER_DB_USER
              value: root
            - name: QUESTION_DB_HOST
              value: 192.168.3.220:33006
            - name: QUESTION_DB_NAME
              value: question
            - name: QUESTION_DB_PASSWORD
              value: kaoyayacom2017
            - name: QUESTION_DB_USER
              value: root
            - name: REDIS_AUTH
              value: ""
            - name: REDIS_HOST
              value: 192.168.3.220:6379
            - name: RUN_MODE
              value: dev
            - name: PORT
              value: "80"
          image: registry.cn-beijing.aliyuncs.com/kaoyaya-micro/sitemap:dev
          name: go-sitemap
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
