kyy-k8s-config/dev/app/backend/go-sitemap/go-sitemap-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: go-sitemap
  name: go-sitemap
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: go-sitemap
